// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityCell matches last snapshot with 1 community 1`] = `
<Link
  className="communityCell"
  replace={false}
  to="/all"
>
  <div
    className="communityCellAvatar"
    style={
      Object {
        "backgroundImage": "url(https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png)",
      }
    }
  />
  <span
    className="communityCellName text-button"
  />
</Link>
`;

exports[`CommunityList matches last snapshot with 1 community 1`] = `
<span
  className="communityList timestamp"
>
  <span
    key="1"
  >
    <Link
      className="communityLink"
      replace={false}
      to="/c/one"
    >
      One
    </Link>
  </span>
</span>
`;

exports[`CommunityList matches last snapshot with 2 communities 1`] = `
<span
  className="communityList timestamp"
>
  <span
    key="1"
  >
    <Link
      className="communityLink"
      replace={false}
      to="/c/one"
    >
      One
    </Link>
  </span>
  <span
    key="and"
  >
     and 
  </span>
  <span
    key="2"
  >
    <Link
      className="communityLink"
      replace={false}
      to="/c/two"
    >
      Two
    </Link>
  </span>
</span>
`;

exports[`CommunityList matches last snapshot with 5 community 1`] = `
<span
  className="communityList timestamp"
>
  <span
    key="1"
  >
    <Link
      className="communityLink"
      replace={false}
      to="/c/one"
    >
      One
    </Link>
    , 
  </span>
  <span
    key="2"
  >
    <Link
      className="communityLink"
      replace={false}
      to="/c/two"
    >
      Two
    </Link>
    , 
  </span>
  <span
    key="and"
  >
     and 
  </span>
  <a
    className="communityLink"
    key="others"
    onClick={[Function]}
  >
    3
     others
  </a>
</span>
`;

exports[`CommunityRow matches last snapshot with 1 community 1`] = `
<div
  className="communityRow"
>
  <CommunityCell
    community={
      Object {
        "id": 1,
        "name": "One",
        "slug": "one",
      }
    }
    key="1"
  />
  <CommunityCell
    community={
      Object {
        "id": 2,
        "name": "Two",
        "slug": "two",
      }
    }
    key="2"
  />
</div>
`;

exports[`PostCommunities matches last snapshot 1`] = `
<div
  className="communities"
>
  <div
    className="row"
  >
    <span
      className="label timestamp"
    >
      Posted In: 
    </span>
    <CommunityList
      communities={
        Array [
          Object {
            "id": 1,
            "name": "One",
            "slug": "one",
          },
          Object {
            "id": 2,
            "name": "Two",
            "slug": "two",
          },
          Object {
            "id": 3,
            "name": "Three",
            "slug": "three",
          },
        ]
      }
      expandFunc={[Function]}
    />
    <a
      className="expandLink"
      onClick={[Function]}
    >
      <Icon
        className="expandIcon timestamp"
        name="ArrowDown"
      />
    </a>
  </div>
</div>
`;

exports[`PostCommunities matches last snapshot when expanded 1`] = `
<div
  className="communities expanded"
>
  <span
    className="expandedSection"
    onClick={[Function]}
  >
    <div
      className="row"
    >
      <span
        className="label timestamp"
      >
        Posted In: 
      </span>
      <a
        className="expandLink"
        onClick={[Function]}
      >
        <Icon
          className="expandIcon timestamp"
          name="ArrowUp"
        />
      </a>
    </div>
    <CommunityRow
      communities={
        Array [
          Object {
            "id": 1,
            "name": "One",
            "slug": "one",
          },
          Object {
            "id": 2,
            "name": "Two",
            "slug": "two",
          },
        ]
      }
      key="1"
    />
    <CommunityRow
      communities={
        Array [
          Object {
            "id": 3,
            "name": "Three",
            "slug": "three",
          },
        ]
      }
      key="3"
    />
  </span>
</div>
`;

exports[`PostCommunities returns null when in the only community 1`] = `""`;
